# 3DRenderPipeline

./: .gitignore  CMakeLists.txt
include/core/: CameraControllerSystem.h  CameraSystem.h  Components.h  DebugLogger.h  Scene.h
include/ecs/: EcsCommon.h  EcsDirector.h  System.h
include/loader/: Loader.h
include/renderer/: MaterialProcessor.h  PointLightTransformer.h  Primitives.h  RendererSystem.h  Shader.h  TextureSystem.h  Vertex.h
res/models/: BrickBall.mtl  BronzeTeapot.mtl  CamoStar.mtl  CubeTest.mtl  CubesTextures.mtl  Korb.mtl  LargePlane.mtl  PurpleShpere.mtl  Pyramid.mtl  SilverTeapot.mtl  SphereTextures.mtl  UVCube.mtl  Ver17.mtl  curuthers.mtl
res/shaders/: Basic.shader  Default.shader
src/: Main.cpp
src/core/: CameraControllerSystem.cpp  CameraSystem.cpp  Core.cpp  Core.h  DebugLogger.cpp  GlDebugger.cpp  GlDebugger.h  Scene.cpp
src/ecs/: ComponentArray.h  ComponentManager.h  EntityManager.cpp  EntityManager.h  SystemManager.h
src/loader/: Loader.cpp  LoaderCommon.cpp  LoaderCommon.h  MtlLoader.cpp  MtlLoader.h  ObjLoader.cpp  ObjLoader.h
src/renderer/: MaterialProcessor.cpp  PointLightTransformer.cpp  Primitives.cpp  RendererSystem.cpp  Shader.cpp  TextureSystem.cpp  Vertex.cpp
